changed to light theme for now

--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -13,9 +13,9 @@ toolbarMode = "viewer"
 
 
 [theme]
-base = "dark"
-primaryColor = "#4fd1c5"
-backgroundColor = "#0f172a"            # slate-900
-secondaryBackgroundColor = "#1f2937"   # gray-800
-textColor = "#e5e7eb"                  # gray-200
+base = "light"
+primaryColor = "#059669"               # Emerald-600
+backgroundColor = "#FFFFFF"            # White
+secondaryBackgroundColor = "#F3F4F6"   # Gray-100
+textColor = "#1F2937"                  # Gray-800
 font = "sans serif"
